# xpilot

./: .cvsignore  .gitignore  BUGS  CMakeLists.txt  CREDITS  ChangeLog  FAQ  FIXED  HPUX.Install  INSTALL  INSTALL.txt  Imakefile  KEYRESOURCES  Local.config  Local.rules  Makefile  Makefile.am  Makefile.in  README  README.LUCS  README.MAPS2  README.OS2  README.SHIPS  README.md  README.msub  README.sounds  README.txt  README.txt.msub  RESOURCES  TESTERS  TODO  XPilot.dsw  cmake-build.sh  cmake-clean.sh  cmake-install.sh  configure  configure.ac  dodgers.sh  hackdarkhell.sh  tc.sh
VMS/: README.VMS  descrip_alpha.mms  descrip_vax.mms  gettimeofday.c  gettimeofday.h  ioctl.c  link_ucx.opt  link_ucx_alpha.opt  link_xlib.opt  makexp_alpha.com  makexp_vax.com  makexps_alpha.com  makexps_vax.com  strcasecmp.h  username.h  xpilot_alpha.opt  xpilot_vax.opt  xpilots_alpha.opt  xpilots_vax.opt
VMS/vms_include/: inet.h  socket.h  stat.h  unixlib.h
contrib/: .cvsignore  Imakefile  Makefile.in  README  mapmapper.c  mkmap.c  wildmap.c  xmkmf-patch
contrib/NT/: Imakefile  Makefile  README.txt  README.txt.msub  READMEbin.txt  READMEbin.txt.msub  ServerMOTD.txt  ServerMOTD.txt.msub
contrib/TkXpInterface/: ChangeLog  FTP.SITES  INSTALL  Makefile  Makefile.cln  Makefile.orig  Merci  New3.2-3.3  New3.3-3.4  README  README.ABSOLUTLY  README.LUCS
contrib/VMS/: README.VMS  descrip.mms  gettimeofday.c  install.com  makexp.com  makexps.com  trnlnm.c  username.c  xp-replay.opt  xp_startup.com  xpilot.hlb  xpilot.opt  xpilots.opt
contrib/maps2image/: Makefile  README  bdf2c.c  maps2image.c
doc/: BUGS  CREDITS  ChangeLog  ChangeLog-3  FAQ  Imakefile  Makefile.in  README.MAPS2  README.SHIPS  README.sounds  README.talkmacros  xpilot-linux.dif  xpilot.spec
fonts/: README  map-5.bdf  map-7.bdf  map-9.bdf
lib/: Imakefile  Makefile.in  defaults  robots  sounds
man6/: xp-replay.6  xpilot.6  xpilots.6
maps/: README
src/: .cvsignore  CMakeLists.txt  HPUX.Install  Imakefile  Imakefile.cln  Makefile  Makefile.am  Makefile.in  Makefile.shipped  Makefile.std  about.c  afaudio.c  audio.h  bit.h  board.c  buttons.c  buttons.h  caudio.c  caudio.h  click.h  client.c  client.h  cmdline.c  cmw.c  cmw.h  collision.c  colors.c  config.h  config.h.cln  configure.c  configure.h  const.h  contact.c  dbuff.c  dbuff.h  default.c  default.h  defaults.h  draw.c  draw.h  (+98 more)
src/client/: CMakeLists.txt  Imakefile  Makefile.am  Makefile.in  about.c  afaudio.c  blockbitmaps.c  blockbitmaps.h  caudio.c  caudio.h  client.c  client.h  colors.c  configure.c  configure.h  connectparam.h  datagram.c  datagram.h  dbuff.c  dbuff.h  debugaudio.c  default.c  default.h  esdaudio.c  gfx2d.c  gfx2d.h  gfx3d.c  gfx3d.h  guimap.c  guimap.h  guiobjects.c  guiobjects.h  hpaudio.c  icon.h  join.c  ncdaudio.c  netclient.c  netclient.h  paint.c  paint.h  (+35 more)
src/client/NT/: .cvsignore  BSString.cpp  BSString.h  MainFrm.cpp  MainFrm.h  RecordDummy.c  Splash.cpp  Splash.h  StdAfx.cpp  StdAfx.h  TalkWindow.cpp  TalkWindow.h  XPilot.ini  XPilot.shp  XPilotNT.cpp  XPilotNT.h  credits.inc.h  resource.h  winAbout.cpp  winAbout.h  winAudio.c  winAudio.h  winBitmap.c  winBitmap.h  winClient.h  winConfig.c  winConfig.h  winXThread.c  winXThread.h  winXXPilot.c  winXXPilot.h  wintalk.c  xpilot.dep  xpilot.dsp  xpilot.mak  xpilot.rc  xpilotDoc.cpp  xpilotDoc.h  xpilotView.cpp  xpilotView.h
src/client/NT/res/: xpilot.rc2
src/client/items/: itemAutopilot.xbm  itemEmergencyThrust.xbm  itemHyperJump.xbm  itemPhasingDevice.xbm  itemTractorBeam.xbm
src/common/: CMakeLists.txt  Imakefile  Makefile.am  Makefile.in  astershape.h  audio.h  bit.h  checknames.c  checknames.h  cmw.c  cmw.h  commonproto.h  config.c  config.h  const.h  draw.h  error.c  error.h  item.h  keys.h  list.c  list.h  math.c  net.c  net.h  pack.h  packet.h  portability.c  portability.h  randommt.c  rules.h  setup.h  shipshape.c  socklib.c  socklib.h  strcasecmp.c  strdup.c  strlcpy.c  types.h  version.h  (+5 more)
src/common/NT/: Imakefile  XPilotFiles.dsp  winNet.c  winNet.h  winX.c  winX.h  winX11.c  winXKey.c  winXKey.h  winX_.h  wsockerrs.c
src/common/NT/bindist/: .cvsignore  Imakefile  README.txt  README.txt.msub  READMEbin.txt  READMEbin.txt.msub  ServerMOTD.txt  ServerMOTD.txt.msub  XPilot.nsi  creditsUpdate.pl  makeDistribution
src/mapedit/: .cvsignore  CMakeLists.txt  COPYRIGHT  Imakefile  Makefile.am  Makefile.dist  Makefile.in  README  README.UPDATE  TODO  T_Form.c  T_Form.h  T_Handler.c  T_Handler.h  T_Popup.c  T_Popup.h  T_Toolkit.c  T_Toolkit.h  T_proto.h  default_colors.h  defaults.h  events.c  events.h  expose.c  expose.h  file.c  file.h  forms.c  forms.h  grow.c  grow.h  help.c  help.h  main.c  main.h  map.h  proto.h  round.c  round.h  tools.c  (+1 more)
src/replay/: .cvsignore  CMakeLists.txt  Imakefile  Makefile.am  Makefile.in  buttons.c  buttons.h  xp-replay.c  xp-replay.h  xpilot-replay.c  xpilot-replay.h
src/replay/NT/: .cvsignore  MainFrm.cpp  MainFrm.h  Properties.cpp  Properties.h  SliderBar.cpp  SliderBar.h  StdAfx.cpp  StdAfx.h  XPreplay.cpp  XPreplay.dep  XPreplay.dsp  XPreplay.dsw  XPreplay.h  XPreplay.rc  XPreplay.reg  XPreplayDoc.cpp  XPreplayDoc.h  XPreplayView.cpp  XPreplayView.h  resource.h
src/replay/NT/res/: XPreplay.rc2
src/replay/tools/: fastf.xbm  pause.xbm  stop.xbm
src/server/: CMakeLists.txt  Imakefile  Makefile.am  Makefile.in  alliance.c  asteroid.c  asteroid.h  cannon.c  cannon.h  cell.c  click.h  cmdline.c  collision.c  command.c  connection.h  contact.c  defaults.h  event.c  fileparser.c  frame.c  global.h  id.c  item.c  laser.c  map.c  map.h  metaserver.c  metaserver.h  netserver.c  netserver.h  object.c  object.h  objpos.c  objpos.h  option.c  parser.c  play.c  player.c  proto.h  robot.c  (+22 more)
src/server/NT/: .cvsignore  ConfigDlg.cpp  ConfigDlg.h  ExitXpilots.cpp  ExitXpilots.h  ReallyShutdown.cpp  ReallyShutdown.h  StdAfx.h  UrlWidget.cpp  UrlWidget.h  resource.h  winServer.h  winSvrThread.c  winSvrThread.h  xpilots.cpp  xpilots.dsp  xpilots.dsw  xpilots.h  xpilots.mak  xpilots.rc  xpilotsDlg.cpp  xpilotsDlg.h
src/server/NT/res/: xpilots.rc2
(+147 files in other folders)
