AC_INIT([XPilot], [4.5.5], [https://github.com/ksoderbl], [xpilot], [https://github.com/ksoderbl/xpilot])
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_PROG_RANLIB
AC_CONFIG_FILES([
	Makefile
	contrib/Makefile
	doc/Makefile
	doc/man/Makefile
	lib/Makefile
	src/Makefile
	src/server/Makefile
	src/replay/Makefile
	src/common/Makefile
	src/client/Makefile
])
AC_OUTPUT

